# umweltmonitoring

./: .env  .env.sample  .gitignore  Caddyfile  README-DOCS.md  README.md  db.drawio  docker-compose.yml  dump.rdb  flake.nix  postgres.nix  process-compose.yaml  pyproject.toml  todo.txt
init_scripts/: init_db.sql
services/backend/: Dockerfile  alembic.ini  main.py
services/backend/app/: main.py
services/backend/app/alembic/: env.py
services/backend/app/core/: config.py
services/backend/app/crud/: crud_sensor.py
services/backend/app/db/: data_ingestion.py  init_db.py  session.py
services/backend/app/models/: base.py  sensor.py
services/backend/app/schemas/: sensor.py
services/backend/app/utils/: keybuilder.py
services/backend/core/: config.py
services/backend/custom_types/: prediction.py
services/backend/utils/: data_transformations.py  db_session.py  keybuilder.py
services/frontend/: Dockerfile  app.py  maindash.py
services/frontend/app/: app.py
services/frontend/app/assets/: style.css
services/frontend/app/components/: plot.py
services/frontend/app/pages/: sensor_box_list.py  sensor_data_viz.py
services/frontend/app/utils/: api_client.py
services/frontend/assets/: sensordaten.csv  style.css
services/frontend/components/: plot.py  sensor_info_box.py  sidebar.py  statistics.py
services/frontend/pages/: sensor_box_home.py  sensor_box_list.py  sensor_box_stats.py  sensor_data_viz.py  temperature_forecast_extended.csv
services/frontend/utils/: api_client.py
services/ml_service/: .env  Dockerfile  prefect.yaml  run_worker.py
services/ml_service/flows/: create_prdictions.py  data_ingestion.py  generate_forecast.py  generate_validation.py  ml_training.py
services/ml_service/tasks/: data_transformations.py  feature_preparation.py  fetch_data.py  load_models.py  ml_training.py  persist_in_db.py  plotting.py  predictions.py
services/ml_service/utils/: config.py  db_setup.py  db_utils.py  feature_enhancer.py  fetch_window.py  markdown.py  parse_datetime.py  prefect_worker.sh  training.py
shared/: pyproject.toml
shared/crud/: crud_sensor.py
shared/schemas/: sensor.py
(+7 files in other folders)
