[project]
name = "OpenSenseMap-Explorer"
version = "0.1.0"
description = "Explore you favorite OpenSenseBoxes!"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "dash>=3.0.3",
    "fastapi>=0.115.12",
    "fastapi-cache2>=0.2.2",
    "prefect[dask]==3.4.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "starlette>=0.46.2",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.34.1",
    "click",
    "h11",
    "pydantic",
    "anyio>=4.9.0",
    "asyncio>=3.4.3",
    "uvloop>=0.21.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "lightgbm>=4.6.0",
    "joblib>=1.5.1",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.3",
    "pvlib>=0.13.0",
    "dash-bootstrap-components>=2.0.3",
]

[tool.uv.workspace]
members = [
    "shared",
]


