[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Datata1", email = "jan-david.wiederstein@codesphere.com" }
]
requires-python = ">=3.12.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
